[gd_scene load_steps=4 format=3 uid="uid://baeshrvg30aer"]

[ext_resource type="Script" path="res://source/main-menu/Play.gd" id="1_o62d3"]
[ext_resource type="PackedScene" uid="uid://dij5xr8swlfdx" path="res://source/main-menu/Background.tscn" id="2_xtk15"]
[ext_resource type="Theme" uid="uid://c2kgsk4ffhbwo" path="res://source/resources/main_menu.theme" id="3_qwd67"]

[node name="Play" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qwd67")
script = ExtResource("1_o62d3")

[node name="Background" parent="." instance=ExtResource("2_xtk15")]
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -429.0
offset_right = 420.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="MapList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
focus_mode = 0
item_count = 6
item_0/text = "Map 1"
item_1/text = "Map 2"
item_2/text = "Map 3"
item_3/text = "Map 4"
item_4/text = "Map (...)"
item_5/text = "Map n"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="MapDetailsLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[u]Players:[/u] 4
[u]Size:[/u] 50x50"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 556)
layout_mode = 2
theme_override_constants/h_separation = 5
columns = 2

[node name="Label0" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1."

[node name="OptionButton0" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 1
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "2."

[node name="OptionButton1" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "3."

[node name="OptionButton2" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 2
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "4."

[node name="OptionButton3" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "5."

[node name="OptionButton4" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "6."

[node name="OptionButton5" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label6" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "7."

[node name="OptionButton6" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label7" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "8."

[node name="OptionButton7" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label8" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "9."

[node name="OptionButton8" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label9" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "10."

[node name="OptionButton9" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label10" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "11."

[node name="OptionButton10" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label11" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "12."

[node name="OptionButton11" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label12" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "13."

[node name="OptionButton12" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label13" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "14."

[node name="OptionButton13" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label14" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "15."

[node name="OptionButton14" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="Label15" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "16."

[node name="OptionButton15" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Human"
popup/item_1/id = 1
popup/item_2/text = "Simple AI"
popup/item_2/id = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/MapList" to="." method="_on_map_list_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
